--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ android {
 
 dependencies {
 
+    def room_version = "2.5.2"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
@@ -57,16 +59,18 @@ dependencies {
     // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
-
-
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.40.5'
     kapt 'com.google.dagger:hilt-android-compiler:2.40.5'
 
     // Retrofit and Moshi
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
     // Coil
     implementation 'io.coil-kt:coil:1.4.0'
+
+
 }
