--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-
+    implementation 'com.google.code.gson:gson:2.8.8'
     // Coil
     implementation 'io.coil-kt:coil:1.4.0'
 
