--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def room_version = "2.5.2"
 
     implementation 'androidx.core:core-ktx:1.7.0'
