--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     // Coil
     implementation 'io.coil-kt:coil:1.4.0'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
