--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
 
     implementation("androidx.core:core-splashscreen:1.0.0")
 
+    // paging
     implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.room:room-paging:2.5.0"
 
 }
