--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def room_version = "2.5.2"
     def paging_version = "3.2.1"
-
+    def glide_version ="4.12.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
@@ -94,5 +94,8 @@ dependencies {
     implementation "androidx.room:room-paging:2.5.0"
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
 }
